# aura-guard-v1.3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml
deploy/systemd/: aura-guard.service
docs/: ARCHITECTURE.md  COMPLIANCE_BRIEF.md  REPLAY_DEMO.md  ROADMAP.md  THREAT_MODEL.md  deployment.md  exit-codes.md  openapi.yaml  policy-signing.md  segments-and-timestamping.md
docs/adrs/: 0001-hash-chain.md  0002-ed25519-policy-signing.md
examples/: request-clean.json  request-finance-cc.json  request-finance-iban.json  request-hr.json  request-medtech.json  request-zwsp-bypass.json
policies/: finance-v1.yaml  hr-bias-v1.yaml  medtech-v1.yaml  trusted_signers.json
scripts/: replay-demo.sh  setup.sh  test.sh
src/: auth.rs  chain.rs  config.rs  crypto.rs  engine.rs  error.rs  lib.rs  log_writer.rs  main.rs  merkle.rs  metrics.rs  models.rs  normalizer.rs  policy.rs  rfc3161.rs  sealer.rs  segment.rs  tst_verify.rs  validators.rs
src/api/: audit.rs  health.rs  mod.rs
tests/: bootstrap_fail_closed.rs  golden.rs  integration.rs  tst_verify.rs
tests/fixtures/tsa/: segment-001.manifest.json  segment-001.tsr  segment-002.manifest.json  segment-002.tsr
