[package]
name = "aura-guard"
version = "1.3.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
description = "Deterministic AI audit middleware with hash-chained evidence log and Ed25519-signed policies."
authors = ["Aura-Guard Engineering"]
repository = "https://github.com/Aura-IDToken/aura-guard"
keywords = ["audit", "compliance", "ai", "deterministic", "evidence"]
categories = ["web-programming", "cryptography"]

[lib]
name = "aura_guard"
path = "src/lib.rs"

[[bin]]
name = "aura-guard"
path = "src/main.rs"

[[bin]]
name = "aura-replay"
path = "src/bin/aura_replay.rs"

[[bin]]
name = "aura-sign-policy"
path = "src/bin/aura_sign_policy.rs"

[[bin]]
name = "aura-seal"
path = "src/bin/aura_seal.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["limit", "timeout", "trace", "cors", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "pem", "pkcs8"] }
hex = "0.4"
base64 = "0.22"
rand = "0.8"

# Regex + Unicode
regex = "1"
unicode-normalization = "0.1"
unicode-security = "0.1"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# State + concurrency
dashmap = "6"
once_cell = "1"
parking_lot = "0.12"

# Errors
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Metrics (Prometheus)
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# HTTP client (blocking) — used only for optional RFC 3161 TSA POSTs.
# Pure-Rust TLS (rustls); no system OpenSSL dependency.
ureq = { version = "2.10", default-features = false, features = ["tls"] }

# RFC 3161 / CMS / PKIX verification stack. Pure-Rust, RustCrypto-curated.
# Used only by `aura-seal verify-tst` in strict mode (operator-pinned roots).
cms = { version = "0.2", default-features = false, features = ["std", "pem"] }
x509-cert = { version = "0.2", default-features = false, features = ["std", "pem"] }
spki = { version = "0.7", default-features = false, features = ["std"] }
der = { version = "0.7", default-features = false, features = ["std", "oid"] }
const-oid = { version = "0.9", default-features = false, features = ["std", "db"] }
rsa = { version = "0.9", default-features = false, features = ["std", "sha2"] }
p256 = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
p384 = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
ecdsa = { version = "0.16", default-features = false, features = ["der"] }
signature = "2"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
tempfile = "3"
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
